--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,136 @@
-.App {
-  text-align: center;
-}
+/* mobile view */
+  /* general structure */
+    .App {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
+  /* header filters */
+    .header-filters-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+    
+    .pagination-wrapper {
+      display: flex;
+      align-items: center;
+      margin: 10px;
+    }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+    .pagination-title {
+      margin-right: 10px;
+    }
 
-.App-link {
-  color: #61dafb;
-}
+  /* movies list */
+    .list-header {
+      width: 100%;
+      text-align: center;
+      font-weight: 700;
+      font-size: 22px;
+      margin: 30px  0 10px;
+    }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+    .movies-container {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 10px;
+      justify-content: center
+    }
+
+  /* movies card */
+    /* general */
+      .movie-card {
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        border: solid grey .5px;
+        margin: 20px 10px;
+        border-radius: 3px;
+        justify-content: flex-start;
+      }
+
+      .movie-title {
+        font-weight: 700;
+      }
+
+      .movie-category {
+        margin: 10px 0 20px;
+      }
+
+      .movie-delete {
+        margin-top: 20px;
+        width: fit-content;
+      }
+
+    /* rating */
+      .rating-wrapper {
+        width: 100%;
+      }
+
+      /* action */
+        .rating-action-container {
+          display: flex;
+          justify-content: space-between;
+          width: 100px;
+        }
+
+        .rating-thumbs {
+          display: flex;
+          align-items: center;
+          
+        }
+
+        .change-vote-count {
+          margin-left: 3px;
+          font-size: 13px;
+        }
+
+        .rating-plus {
+          background: #858585;
+        }
+
+        .thumb-icon {
+          height: 22px;
+        }
+    
+        .thumb-icon path {
+          fill: #858585;
+        }
+    
+        .rating-minus {
+          background: #C5C5C5;
+        }
+
+      /* bar */
+        .rating-bar-container {
+          width: 100px;
+          display: flex;
+        }
+
+        .rating-bar {
+          height: 2px;
+        }
+
+  /* navigation */
+    .navigation-wrapper {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .nav-button {
+      margin: 10px;
+    }
+
+    .nav-button.active {
+      cursor: pointer;
+    }
+
+/* desktop/tablet view */
+@media (min-width : 600px) {
+  .header-filters-wrapper {
+  flex-direction: unset;
   }
 }
